# VoiceHumanOrAI

./: .gitignore  .gitmodules  IMPLEMENTATION_GUIDE_EXTERNAL_TOOLS.md  LICENSE  README.md  USAGE_GUIDE.md  calibrate_bionic.py  calibrate_bionic_new.py  dataset_builder.py  generate_and_test.py  generate_spectrogram.py  pyproject.toml  run_experiment.py  test_bionic_real.py
Theory/: KKP_Technical_Documentation.md  New Text Document.txt  kkp_project_guide.md  tt.txt
docs/: SRS.md  UML.puml
models/: rf_model.pkl  rf_scaler.pkl
src/: app.py  bionic_core.py  ml_core.py  train_model.py  utils.py
src/assets/: style.css
src/servers/: lux_server.py  moss_server.py
tests/: test_bionic.py  test_ml.py
