[project]
name = "voicehumanorai"
version = "0.1.0"
description = ""
authors = [
    {name = "Rostyslav",email = "rost.tarasov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "edge-tts (>=7.2.7,<8.0.0)",
    "datasets (>=4.6.1,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "dash (>=4.1.0,<5.0.0)",
    "dash-bootstrap-components (>=2.0.4,<3.0.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
